# Assesment

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
dehaat_procurement/: hooks.py  modules.txt  patches.txt
dehaat_procurement/api/: __init__.py  dashboard.py  purchase_order.py  sap_api.py
dehaat_procurement/fixtures/: custom_field.json  role.json  workflow.json  workflow_action_master.json  workflow_state.json  workspace.json
dehaat_procurement/procurement_management/: __init__.py
dehaat_procurement/procurement_management/doctype/: __init__.py
dehaat_procurement/procurement_management/doctype/sauda_requisition/: __init__.py  sauda_requisition.js  sauda_requisition.json  sauda_requisition.py  test_sauda_requisition.py
dehaat_procurement/procurement_management/doctype/sauda_requisition_item/: sauda_requisition_item.js  sauda_requisition_item.json  sauda_requisition_item.py
dehaat_procurement/procurement_management/page/procurement_dashboard/: procurement_dashboard.py
dehaat_procurement/procurement_management/page/warehouse_receiving/: warehouse_receiving.js  warehouse_receiving.json  warehouse_receiving.py
dehaat_procurement/procurement_management/workspace/procurement_management/: procurement_management.json
dehaat_procurement/public/css/: warehouse_receiving.css
docs/: IMPLEMENTATION.md  demo-guide.md  design-decisions.md
