[metadata]
name = dehaat_procurement
version = attr: dehaat_procurement.__version__
description = DeHaat Procurement Workflow & Warehouse Receiving Application
author = DeHaat Engineering
author_email = engineering@dehaat.com
license = MIT

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.package_data]
* = *.json, *.js, *.css, *.html, *.txt, *.md
